--- a/index.html
+++ b/index.html
@@ -39,15 +39,11 @@
                     alt="Até o último Homem capa"></a>
             </div>
         </div>
-    </div>
-    <div id="container"></div>
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/filmes/Django Livre capa.jpg" alt="Django Livre capa"></a>
             </div>
         </div>
-    </div>
-    <div id="container"></div>
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/filmes/Deus não esta Morto capa.webp"
@@ -57,49 +53,43 @@
     </div>
     
     <h1>Séries</h1>
-    <div id="container"></div>
+    <div id="container">
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/serie/The Chosen capa.jpg" alt="The Chosen capa"></a>
             </div>
         </div>
-    </div>
-    <div id="container"></div>
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/serie/breaking-bad_capa.jpg" alt="breaking bad capa"></a>
             </div>
         </div>
-    </div>
-    <div id="container"></div>
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/serie/peaky-blinders capa.jpg" alt="peaky blinders capa"></a>
             </div>
         </div>
     </div>
+
     
     <h1>Animes</h1>
-    <div id="container"></div>
+    <div id="container">
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/anime/jujutsu kaisen capa.jpg" alt="jujutsu kaisen capa"></a>
             </div>
         </div>
-    </div>
-    <div id="container"></div>
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/anime/Koe-no-Katachi-capa.jpg" alt="Koe-no-Katachi-capa"></a>
             </div>
         </div>
-    </div>
-    <div id="container"></div>
         <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/anime/your name capa.jpg" alt="your name capa"></a>
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
