--- a/index.html
+++ b/index.html
@@ -9,87 +9,105 @@
 </head>
 
 <body>
-    <h1>Games</h1>
-    <div id="container">   
-        <div class="coluna">
+    <div class="tudo">
+        <header>César Alonso</header>
+
+        <h1>Games</h1>
+        <div id="container">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/games/Crash_Bandicoot_1_capa.png"
-                    alt="Crash_Bandicoot_1_capa"></a>
+                        alt="Crash_Bandicoot_1_capa"></a>
             </div>
-        </div>
-        <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/games/Grand_Theft_Auto_San_Andreas_capa.png"
-                    alt="Gta_San_Andreas_capa"></a>
+                        alt="Gta_San_Andreas_capa"></a>
             </div>
-        </div>
-        <div class="coluna">
             <div class="card">
                 <a href="@" target="_blank" rel="next"><img src="image/games/Capa-dbz-!-meteor.webp"
-                    alt="Capa-dbz-budokai tenkaichi"></a>
+                        alt="Capa-dbz-budokai tenkaichi"></a>
             </div>
+            <div class="card">
+                <a href="@" target="_blank" rel="next"><img src="image/games/Naruto Shippuden Ultimate Ninja 5 Capa.jpg"
+                        alt="Naruto Shippuden Ultimate Ninja 5 Capa"></a>
+            </div>
+            <div class="card">
+                <a href="@" target="_blank" rel="next"><img src="image/games/Protector_of_earth Capa.jpg"
+                        alt="Protector_of_earth Capa"></a>
+            </div>
+            <div class="card">
+                <a href="@" target="_blank" rel="next"><img src="image/games/Mafia_Definitive_Edition Capa.jpg"
+                        alt="Mafia_Definitive_Edition Capa"></a>
+            </div>
+            <div class="card">
+                <a href="@" target="_blank" rel="next"><img src="image/games/Ghostwire_Tokyo_capa.jpg"
+                        alt="Capa-dbz-budokai tenkaichi"></a>
+            </div>
+        </div>
+        <h1>Filmes</h1>
+        <div id="container">
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/filmes/Até o último Homem capa.jpg"
+                            alt="Até o último Homem capa"></a>
+                </div>
+            </div>
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/filmes/Django Livre capa.jpg"
+                            alt="Django Livre capa"></a>
+                </div>
+            </div>
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/filmes/Deus não esta Morto capa.webp"
+                            alt="Deus não esta Morto capa"></a>
+                </div>
+            </div>
+        </div>
+        <h1>Séries</h1>
+        <div id="container">
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/serie/The Chosen capa.jpg"
+                            alt="The Chosen capa"></a>
+                </div>
+            </div>
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/serie/breaking-bad_capa.jpg"
+                            alt="breaking bad capa"></a>
+                </div>
+            </div>
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/serie/peaky-blinders capa.jpg"
+                            alt="peaky blinders capa"></a>
+                </div>
+            </div>
+        </div>
+        <h1>Animes</h1>
+        <div id="container">
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/anime/jujutsu kaisen capa.jpg"
+                            alt="jujutsu kaisen capa"></a>
+                </div>
+            </div>
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/anime/Koe-no-Katachi-capa.jpg"
+                            alt="Koe-no-Katachi-capa"></a>
+                </div>
+            </div>
+            <div class="coluna">
+                <div class="card">
+                    <a href="@" target="_blank" rel="next"><img src="image/anime/your name capa.jpg"
+                            alt="your name capa"></a>
+                </div>
+            </div>
+        </div>
         </div>
     </div>
-
-    <h1>Filmes</h1>
-    <div id="container">
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/filmes/Até o último Homem capa.jpg"
-                    alt="Até o último Homem capa"></a>
-            </div>
-        </div>
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/filmes/Django Livre capa.jpg" alt="Django Livre capa"></a>
-            </div>
-        </div>
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/filmes/Deus não esta Morto capa.webp"
-                    alt="Deus não esta Morto capa"></a>
-            </div>
-        </div>
-    </div>
-    
-    <h1>Séries</h1>
-    <div id="container">
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/serie/The Chosen capa.jpg" alt="The Chosen capa"></a>
-            </div>
-        </div>
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/serie/breaking-bad_capa.jpg" alt="breaking bad capa"></a>
-            </div>
-        </div>
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/serie/peaky-blinders capa.jpg" alt="peaky blinders capa"></a>
-            </div>
-        </div>
-    </div>
-
-    
-    <h1>Animes</h1>
-    <div id="container">
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/anime/jujutsu kaisen capa.jpg" alt="jujutsu kaisen capa"></a>
-            </div>
-        </div>
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/anime/Koe-no-Katachi-capa.jpg" alt="Koe-no-Katachi-capa"></a>
-            </div>
-        </div>
-        <div class="coluna">
-            <div class="card">
-                <a href="@" target="_blank" rel="next"><img src="image/anime/your name capa.jpg" alt="your name capa"></a>
-            </div>
-        </div>
-    </div>
-</div>
 </body>
+
 </html>
